# msbuild

./: Cargo.toml
examples/: main.rs
src/: lib.rs  versions.rs  vs_installation.rs  vs_llvm.rs  vs_paths.rs  vs_where.rs  win_sdk.rs
tests/: test_msbuild.rs  test_vswhere.rs  test_win_sdk.rs
