[package]
name = "msbuild"
version = "0.2.0"
edition = "2021"
description = "Allows builds to run msbuild for visual studio projects"
license = "MIT"
repository = "https://github.com/uglyoldbob/msbuild"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
